Use curl in HEALTHCHECK of lambda
- Lambda関数呼び出しに替えて、curlによるHTTPアクセスによりHEALTHCHECKを実施する（AWS Lambda RIEの関数同時実行に問題がありそう？ なため）
- 参考：<https://github.com/aws/aws-sam-cli/issues/6157>

--- a/tests/example_lambda/Dockerfile
+++ b/tests/example_lambda/Dockerfile
@@ -1,7 +1,9 @@
 FROM playwright-python-lambda:local
 WORKDIR /function
+RUN apt-get update && apt-get install -y curl \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 COPY example_lambda.py ./
-COPY healthcheck.py /
 HEALTHCHECK --interval=30s --timeout=3s --start-period=30s --start-interval=5s --retries=3 \
-    CMD python /healthcheck.py http://lambda:8080/2015-03-31/functions/function/invocations || exit 1
+    CMD curl -s http://localhost:8080/2015-03-31/functions/function/invocations || exit 1
 CMD ["example_lambda.example_handler"]
